--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Hello</title>
-</head>
-<body>
-<h1>Hello Mir!</h1>
-</body>
+  </head>
+  <body>
+    {% if name %}
+    <h1>Hello {{ name}}</h1>
+    {% else %}
+    <h1>Hello World</h1>
+    {% endif %}
+    <ul>
+      {% for product in products %}
+      <li>{{ product.title }} {{ product.collection.title}}</li>
+      {% endfor %}
+    </ul>
+  </body>
 </html>
