--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -12,7 +12,7 @@
     {% endif %}
     <ul>
       {% for product in products %}
-      <li>{{ product.title }} {{ product.collection.title}}</li>
+      <li>{{ product.title }} </li>
       {% endfor %}
     </ul>
   </body>
