--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -10,10 +10,7 @@
     {% else %}
     <h1>Hello World</h1>
     {% endif %}
-    <ul>
-      {% for product in products %}
-      <li>{{ product.title }} </li>
-      {% endfor %}
-    </ul>
+    {{ result }}
+    }
   </body>
 </html>
